--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "qqlcx5 <893917884@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,13 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "element-ui": "^2.2.1",
+    "axios": "^0.18.0",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
-    "vue-resource": "^1.3.5",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-resource": "^1.5.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
